MXTASKDEFSTACK.template.json
{
  "Resources": {
    "MXTASKDEFSTACKMXVPC0301EF14F06B": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXVPC0301"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/Resource"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1SubnetE9B7D36C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/Subnet"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1RouteTable1F2884B4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/RouteTable"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1RouteTableAssociation4E688EB2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1RouteTable1F2884B4"
        },
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1SubnetE9B7D36C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/RouteTableAssociation"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1DefaultRoute4F150F37": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1RouteTable1F2884B4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301IGW623C064A"
        }
      },
      "DependsOn": [
        "MXTASKDEFSTACKMXVPC0301VPCGWCADB18B6"
      ],
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/DefaultRoute"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1EIP89A281E6": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/EIP"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet1NATGatewayF0B41102": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1SubnetE9B7D36C"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "MXTASKDEFSTACKMXVPC0301PublicSubnet1EIP89A281E6",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet1/NATGateway"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2SubnetE51D7C18": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/Subnet"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2RouteTable7669ACB5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/RouteTable"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2RouteTableAssociation88B15B4B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2RouteTable7669ACB5"
        },
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2SubnetE51D7C18"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/RouteTableAssociation"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2DefaultRoute6B9ACA78": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2RouteTable7669ACB5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301IGW623C064A"
        }
      },
      "DependsOn": [
        "MXTASKDEFSTACKMXVPC0301VPCGWCADB18B6"
      ],
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/DefaultRoute"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2EIP9F1C8580": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/EIP"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PublicSubnet2NATGateway12CAB4BA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2SubnetE51D7C18"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "MXTASKDEFSTACKMXVPC0301PublicSubnet2EIP9F1C8580",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PublicSubnet2/NATGateway"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet1Subnet0BAE7D15": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1/Subnet"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet1RouteTableA01545F2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1/RouteTable"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet1RouteTableAssociation28CF88CC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet1RouteTableA01545F2"
        },
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet1Subnet0BAE7D15"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet1DefaultRouteCBD2D49B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet1RouteTableA01545F2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1NATGatewayF0B41102"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet1/DefaultRoute"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet2SubnetF4F484E1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2/Subnet"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet2RouteTableF28BEEE0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2/RouteTable"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet2RouteTableAssociation18052569": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet2RouteTableF28BEEE0"
        },
        "SubnetId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet2SubnetF4F484E1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "MXTASKDEFSTACKMXVPC0301PrivateSubnet2DefaultRoute80E88A96": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PrivateSubnet2RouteTableF28BEEE0"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2NATGateway12CAB4BA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/PrivateSubnet2/DefaultRoute"
      }
    },
    "MXTASKDEFSTACKMXVPC0301IGW623C064A": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "MXVPC0301"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/IGW"
      }
    },
    "MXTASKDEFSTACKMXVPC0301VPCGWCADB18B6": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        },
        "InternetGatewayId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301IGW623C064A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXVPC0301/VPCGW"
      }
    },
    "MXTASKDEFSTACKMXSECGROUP0301925488D4": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MXTASKDEFSTACK/MXTASKDEFSTACKMXSECGROUP0301",
        "GroupName": "MXSECGROUP0301",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "ALLOWHTTP80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "MXTASKDEFSTACKMXVPC0301EF14F06B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXSECGROUP0301/Resource"
      }
    },
    "MXTASKDEFSTACKMXCLUSTER0301C6BDF98F": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "MXCLUSTER0301"
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXCLUSTER0301/Resource"
      }
    },
    "MXTASKDEFSTACKMXFARGATETASKDEF0301TaskRoleA09DE560": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXFARGATETASKDEF0301/TaskRole/Resource"
      }
    },
    "MXTASKDEFSTACKMXFARGATETASKDEF030152FC8924": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  ".dkr.ecr.us-east-2.",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/MXIMAGEREPO:MXAPP"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": "MXLOG0301",
                "awslogs-stream-prefix": "MX",
                "awslogs-region": "us-east-2"
              }
            },
            "Name": "MXTASKDEFSTACKMXCONTAINERDEF0301",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "MXTASKDEFSTACKMXFARGATETASKDEF0301ExecutionRole1E747B7C",
            "Arn"
          ]
        },
        "Family": "MXTASKDEFSTACKMXTASKDEFSTACKMXFARGATETASKDEF0301E1623E21",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "MXTASKDEFSTACKMXFARGATETASKDEF0301TaskRoleA09DE560",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXFARGATETASKDEF0301/Resource"
      }
    },
    "MXTASKDEFSTACKMXFARGATETASKDEF0301ExecutionRole1E747B7C": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXFARGATETASKDEF0301/ExecutionRole/Resource"
      }
    },
    "MXTASKDEFSTACKMXFARGATETASKDEF0301ExecutionRoleDefaultPolicyFF1BABA0": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:us-east-2:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":repository/MXIMAGEREPO"
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":logs:us-east-2:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":log-group:MXLOG0301:*"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "MXTASKDEFSTACKMXFARGATETASKDEF0301ExecutionRoleDefaultPolicyFF1BABA0",
        "Roles": [
          {
            "Ref": "MXTASKDEFSTACKMXFARGATETASKDEF0301ExecutionRole1E747B7C"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXFARGATETASKDEF0301/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "MXTASKDEFSTACKMXFARGATESERVICE0301ServiceC5A97D34": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "MXTASKDEFSTACKMXCLUSTER0301C6BDF98F"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "MXTASKDEFSTACKMXSECGROUP0301925488D4",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet1SubnetE9B7D36C"
              },
              {
                "Ref": "MXTASKDEFSTACKMXVPC0301PublicSubnet2SubnetE51D7C18"
              }
            ]
          }
        },
        "PlatformVersion": "LATEST",
        "ServiceName": "MXFARGATESERVICE0301",
        "TaskDefinition": {
          "Ref": "MXTASKDEFSTACKMXFARGATETASKDEF030152FC8924"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/MXTASKDEFSTACKMXFARGATESERVICE0301/Service"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/12QwU7DMAyGn2X3NLBeOI8C0zigqkW7Ijd4YNomVeJ0qqq9O2mz0omTv/xxrC9O5TaV9xs4u0R91klDlRxLBlWLEH2MqFI5HjslspM+5pnIfdWQKn2lkadspcJ4xneoGlzzNds5ZxQBk9F/zRM8H/KpvAHvgfEMg8gt9QHXwQfNaAMvDdHketpxcP1uUbMoUXlLPOyt8d3scBtcBConx6zxLoybrhd8AfsFk6arn/BEmhbJ/4nRDKTR3mTXtyXanlT8eMSLIGjlWJi4jrnmJqxu9o80KVlZYGccsbHDI7jwrkBnvI3DFr6IV+jhbvuw+XFEifWaqUVZxPoLDxaq7MMBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "MXTASKDEFSTACK/CDKMetadata/Default"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
